# ocaml-multibase

./: .gitmodules  LICENSE  README.md  dune  dune-project  multibase.opam
src/: base32.ml  dune  encoding.ml  encoding.mli  gen.ml  multibase.ml  multibase.mli  multibase_intf.ml
test/: prelude.txt  test.ml
